--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,8 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 :root {
   /* Svelte Default Font */
+  /* @TODO: Change these Font */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -18,4 +20,9 @@ body::-webkit-scrollbar {
 body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+/* Global Styles (PostCSS) */
+.page-title {
+  @apply text-4xl sm:text-6xl md:text-8xl font-bold;
 }
