--- a/src/app.postcss
+++ b/src/app.postcss
@@ -26,3 +26,7 @@ body {
 .page-title {
   @apply text-4xl sm:text-6xl md:text-8xl font-bold;
 }
+
+.page-subtitle {
+  @apply text-2xl sm:text-4xl md:text-6xl font-bold;
+}
