--- a/src/app.css
+++ b/src/app.css
@@ -6,8 +6,8 @@
 :root {
   /* Svelte Default Font */
   /* @TODO: Change these Font */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
