--- a/src/app.css
+++ b/src/app.css
@@ -24,9 +24,13 @@ body {
 
 /* Global Styles (PostCSS) */
 .page-title {
-  @apply text-4xl sm:text-6xl md:text-8xl font-bold;
+  @apply text-4xl font-bold sm:text-6xl md:text-8xl;
 }
 
 .page-subtitle {
-  @apply text-2xl sm:text-4xl md:text-6xl font-bold;
+  @apply text-2xl font-bold sm:text-4xl md:text-6xl;
+}
+
+.container {
+  @apply mx-auto w-full p-8 md:w-2/3 lg:w-1/2;
 }
