--- a/src/app.scss
+++ b/src/app.scss
@@ -1,11 +1,8 @@
-/* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  /* Svelte Default Font */
-  /* @TODO: Change these Font */
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -22,7 +19,6 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
-/* Global Styles (PostCSS) */
 .page-title {
   @apply text-4xl font-bold sm:text-6xl md:text-8xl;
 }
@@ -33,4 +29,26 @@ body {
 
 .container {
   @apply mx-auto w-full p-8 md:w-2/3 lg:w-1/2;
+}
+
+.igroup {
+  @apply my-2 flex flex-row justify-center gap-4;
+}
+
+.game-setup {
+  & h1 {
+    @apply my-3 text-2xl font-bold;
+  }
+
+  & h2 {
+    @apply my-3 text-xl font-bold;
+  }
+
+  & label {
+    @apply w-1/3 text-left;
+  }
+
+  & input {
+    @apply rounded p-1 text-black;
+  }
 }
