--- a/src/app.scss
+++ b/src/app.scss
@@ -20,11 +20,11 @@ body {
 }
 
 .page-title {
-  @apply text-4xl font-bold sm:text-6xl md:text-8xl;
+  @apply text-4xl font-bold md:text-6xl;
 }
 
 .page-subtitle {
-  @apply text-2xl font-bold sm:text-4xl md:text-6xl;
+  @apply text-2xl font-bold md:text-4xl;
 }
 
 .container {
