--- a/src/app.scss
+++ b/src/app.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .page-subtitle {
-  @apply text-2xl font-bold md:text-4xl;
+  @apply text-xl md:text-2xl;
 }
 
 .container {
@@ -37,19 +37,21 @@ body {
 
 .game-setup {
   & h1 {
-    @apply my-3 text-2xl font-bold;
+    @apply my-3 border-b pb-1 text-2xl font-bold;
   }
 
   & h2 {
-    @apply my-3 text-xl font-bold;
+    @apply my-3 border-b pb-1 text-left text-xl font-bold;
   }
-
+  & p {
+    @apply text-lg;
+  }
   & label {
-    @apply w-1/3 text-left;
+    @apply w-1/2 text-left text-lg;
   }
 
   & input {
-    @apply rounded p-1 text-black;
+    @apply w-1/2 rounded bg-gray-100 p-1 pl-4 text-black;
   }
 }
 
